# clinical-ddf-bridge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  run-checks.sh
.github/: dependabot.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  conflict-check.yml  deploy-demo.yml  production-pipeline.yml
apps/ctms/: database.py  main.py  models.py  rendering.py
apps/designer/: __init__.py  content_assembly.py  db.py  delta.py  evs_client.py  library.py  main.py  mapper.py  rules.py  soa_models.py  validator.py  xml_mapping.py
apps/econsent/: __init__.py  database.py  main.py  models.py
apps/eisf/: __init__.py  database.py  models.py
apps/etmf/: __init__.py  cryptography.py  database.py  lifecycle.py  main.py  migrate.py  models.py  sealer.py
apps/execution/: cdisc_validator.py  cryptography.py  demographics.py  edit_checks.py  export.py  lab_ranges.py  ledger.py  main.py  outliers.py  query_service.py  sdtm_mapper.py  subject_lifecycle.py  translator.py  trial_lock.py  ucum.py
apps/gateway/: main.py
apps/interop/: __init__.py  auth.py  database.py  fhir_adapter.py  main.py  migrate.py  models.py  sync_engine.py
apps/notifications/: __init__.py  database.py  delivery.py  main.py  models.py
apps/quality/: main.py  models.py
apps/web/: index.html  index.js  package.json  style.css  vite.config.js
docker/: Dockerfile  cadence-realm.json  docker-compose.yml
docs/: DATA_LIFECYCLE.md  DEVELOPMENT_GUIDE.md  FEATURE_MATRIX.md  LOCAL_DEV_ENVIRONMENT.md  SRS.md  feature_matrix.md
docs/SDLC/: 01_Product_Requirements_Document_PRD.md  02_Technical_Design_Document_TDD.md  03_API_Integration_Specification.md  04_Data_Standards_Interoperability_Blueprint.md  05_Security_Compliance_Audit_Spec.md  06_QA_Validation_Plan.md  07_Operations_Deployment_Guide.md  08_Implementation_Roadmap.md  08_Validation_Security_Operational_Checks.md  IQ_OQ_PQ_Execution_Report.md  Requirements_Traceability_Matrix.md  SDLC_Documentation_Suite.md  vulnerability_exclusions_ledger.json
docs/adr/: 0001-translation-job-and-layout-engine.md  0001-usdm-dynamic-mapper-and-cache.md  0002-unified-database-management-and-pre-boot-migrations.md  0003-api-first-validation-and-usdm-integration.md  001-gateway-authentication-propagation.md  2023-01-01-neo4j-graph-database.md  2023-01-02-postgresql-relational-database.md  2023-01-03-pydantic-v2-domain-models.md  2023-01-04-keycloak-identity-management.md  2026-06-06-usdm-pydantic-models.md  2026-07-22-api-boundary-fast-fail.md  2026-07-22-api-first-in-memory-diffing.md  2026-07-22-api-first-validation-and-usdm-integration.md  2026-07-22-audit-log-design.md  2026-07-22-compliance-tracing-and-automated-trial-locks.md  2026-07-22-cryptographic-audit-ledger-and-gxp-lock.md  2026-07-22-database-shadow-triggers.md  2026-07-22-gateway-authentication-propagation.md  2026-07-22-gateway-openapi-aggregation.md  2026-07-22-merkle-root-sealing.md  2026-07-22-metadata-driven-grid-layouts.md  2026-07-22-pnpm-frontend-workspace.md  2026-07-22-schema-mapping-design.md  2026-07-22-signature-re-authentication.md  2026-07-22-transactional-sql-engine-gxp-auditing.md  2026-07-22-translation-job-and-layout-engine.md  2026-07-22-unified-database-management-and-pre-boot-migrations.md  2026-07-22-usdm-dynamic-mapper-and-cache.md  2026-07-23-canonical-json-signatures-and-rolling-versioning.md  2026-07-23-core-service-oriented-clinical-engine.md  2026-07-23-declarative-ruleset-automerge.md  2026-07-23-decoupled-database-and-preboot-migration-consolidation.md  2026-07-23-targeted-integration-path-isolation.md  2026-07-24-clinical-query-workflow-authorization.md  2026-07-24-code-formatting-and-style-standardization.md  2026-07-24-continuous-fmea-gxp-aligned-exemption-ledger.md  2026-07-24-ecoa-instrument-assignment-compliance.md  2026-07-24-fhir-esource-ecoa-sync-gateway.md  2026-07-24-medical-coding-engine-persistence.md  2026-07-24-selective-object-level-audit.md  (+23 more)
scripts/: check-links.js  generate_rtm.py  post_pr_comment.py  sync_ruleset.py  validate_adrs.py  validate_markdown.py  validate_vulnerabilities.py
tests/: conftest.py  test_api_contract_validation.py  test_audit.py  test_biostat.py  test_centralized_rbac.py  test_clinical_engine.py  test_clinical_queries.py  test_cohorts.py  test_content_assembly.py  test_core_models.py  test_coverage_boost.py  test_cryptography.py  test_ctms.py  test_ctms_finances.py  test_database_consolidation.py  test_deid.py  test_deid_transforms.py  test_delegation.py  test_delta.py  test_demographics.py  test_designer_differences.py  test_designer_rules.py  test_econsent.py  test_edit_checks.py  test_eisf_persistence.py  test_eligibility_engine.py  test_etmf.py  test_etmf_compliance.py  test_etmf_qc.py  test_etmf_signatures.py  test_evs_client.py  test_form_submissions.py  test_gateway.py  test_global_library.py  test_interop.py  test_lab_range_management.py  test_lab_ranges.py  test_lab_reference_range_persistence.py  test_layout_validator.py  test_ledger.py  (+38 more)
tests/validation/: environment_integrity_tests.py  (+1 more)
(+27 files in other folders)
