[tool.poetry]
name = "cadence-clinical"
version = "0.1.0"
description = "The Metadata-Driven Clinical Execution Platform"
authors = [
    "Frederick de Ruiter <fpderutier@gmail.com>",
]
readme = "README.md"
packages = [
    { include = "apps" },
    { include = "packages" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.139.2"
pydantic = "^2.6.0"
httpx = "^0.27.0"
neo4j = "^5.18.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standard"], version = "^0.51.0"}
# Gateway & Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
usdm = "0.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
ruff = "^0.3.0"
black = "^26.5.1"
aiosqlite = "^0.22.1"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.1"
detect-secrets = "^1.5.0"
bandit = "^1.9.4"
pip-audit = "^2.10.1"
ecdsa = "^0.19.2"

[tool.black]
line-length = 88
target-version = [
    "py311",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=apps --cov=packages --cov-fail-under=80"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "apps",
    "packages",
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "cadence-clinical"
version = "0.1.0"
description = "The Metadata-Driven Clinical Execution Platform"
authors = [
    { name = "Frederick de Ruiter", email = "fpderutier@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "neo4j>=5.18.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "usdm>=0.65.0",
    "defusedxml (>=0.7.1,<0.8.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.1",
]
