[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=apps --cov=packages --cov-fail-under=80"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "apps",
    "packages",
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadence-clinical"
version = "0.1.0"
description = "The Metadata-Driven Clinical Execution Platform"
authors = [
    { name = "Frederick de Ruiter", email = "fpderutier@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2,<0.140.0",
    "uvicorn[standard]>=0.51.0,<0.52.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "neo4j>=5.18.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "usdm>=0.65.0",
    "defusedxml>=0.7.1,<0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.3.0",
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.1",
    "detect-secrets>=1.5.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "ecdsa>=0.19.2",
]

[tool.hatch.build.targets.wheel]
packages = [
    "apps",
    "packages"
]
